# smb_mission_planner

./: CMakeLists.txt  README.md  package.xml  setup.py
configs/: combined_mission.yaml  default_config.yaml  example_config.yaml  example_config1.yaml  my_config copy.yaml  my_config.yaml
configs/hilti_demo/: config.rviz  mission_config.yaml
configs/missions/: autonomous_mission.yaml  final_mission.yaml  mission.yaml
docs/: navigation_mission_tutorial.md
examples/: combined_mission.py  mock_servers.py  navigation_mission.py
launch/: combined_mission.launch  detection_mission_smb_kinova.launch  mission_planner.launch  mission_recorder.launch  navigation_mission.launch
launch/examples/: combined_mission.launch  detection_mission_smb_kinova.launch  mission_recorder.launch  navigation_mission.launch
launch/hilti_demo/: hilti_demo.launch  hilti_mock_modules.launch
scripts/: mission_planner_node.py  mission_recorder_node.py  quaternion_to_euler_node.py
scripts/examples/: combined_mission.py  navigation_mission.py  navigation_mission_recorder_node.py
scripts/hilti_demo/: hilti_demo.md  hilti_demo.py  hilti_mock_modules.py  path_generator.py
src/smb_mission_planner/: __init__.py  base_state_ros.py  default_mission.py  detection_states.py  manipulation_states.py  mission_plan.py  mission_planner.py  mission_recorder.py  navigation_states.py
src/smb_mission_planner/grinding_mission/: demo_states.py
src/smb_mission_planner/missions/: far_waypoint_mission.py  twist_mission.py  waypoint_mission.py
src/smb_mission_planner/utils/: __init__.py  manipulation_utils.py  mission_recorder.py  moveit_utils.py  navigation_mission_recorder.py  navigation_utils.py  rocoma_utils.py  ros_utils.py
srv/: AddMission.srv  DeleteGoal.srv  DetectObject.srv
