<?xml version="1.0"?>
<package format="2">
  <name>smb_mission_planner</name>
  <version>0.1.0</version>
  <description>
    This package contains the smb mission planner.
  </description>
  <author>Victor Klemm</author>
  <maintainer email="vklemm@ethz.ch">Victor Klemm</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>rospy</depend>
  <depend>smach</depend>
  <depend>smach_ros</depend>
  <depend>std_msgs</depend>
</package>
