<?xml version="1.0"?>
<package format="2">
  <name>smb_mission_planner</name>
  <version>0.1.0</version>
  <description>
    This package contains the smb mission planner.
  </description>
  <author>Victor Klemm</author>
  <maintainer email="vklemm@ethz.ch">Victor Klemm</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>smach</build_depend>
  <build_depend>smach_ros</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>smach_viewer</exec_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
</package>
